welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:6: error: missing arguments for method condition;
follow this method with `_' if you want to treat it as a partially applied function
(condition a && !condition b) || (condition b && !condition a)
 ^